# fused-effects-exceptions

./: .gitignore  .travis.yml  ChangeLog.md  LICENSE  README.md  cabal.project  cabal.project.ci  fused-effects-exceptions.cabal  stack.yaml
.github/workflows/: ci.yml  haskell.yml
src/Control/Carrier/: Catch.hs  Resource.hs
src/Control/Carrier/State/: IORef.hs
src/Control/Effect/: Catch.hs  Exception.hs  Resource.hs
test/: Main.hs
