cabal-version:       2.4

name:                fused-effects-exceptions
version:             1.0.0.0
synopsis:            Handle exceptions thrown in IO with fused-effects.
description:         Provides Resource and Catch effects capable of reacting to and catching GHC's dynamic exceptions.
homepage:            https://github.com/fused-effects/fused-effects-exceptions#readme
license:             BSD-3-Clause
license-file:        LICENSE
author:              Josh Vera, Patrick Thomson, and Rob Rix
maintainer:          patrickt@github.com
copyright:           2019 Josh Vera, Patrick Thomson, and Rob Rix
category:            Control
build-type:          Simple
extra-source-files:  README.md

tested-with:         GHC == 8.6.4

library
  hs-source-dirs:      src
  default-language:    Haskell2010
  exposed-modules:     Control.Carrier.State.IORef
                       Control.Effect.Exception
  build-depends:       base             >= 4.7 && < 5
                     , fused-effects    >= 1.0.0.0
                     , transformers     >= 0.4 && < 0.6

source-repository head
  type:     git
  location: https://github.com/fused-effects/fused-effects-exceptions
