cabal-version:       2.4

name:                fused-effects-exceptions
version:             1.0.0.0
synopsis:            Handle exceptions thrown in IO with fused-effects.
description:         Provides Resource and Catch effects capable of reacting to and catching GHC's dynamic exceptions.
homepage:            https://github.com/fused-effects/fused-effects-exceptions#readme
license:             BSD-3-Clause
license-file:        LICENSE
author:              Josh Vera, Patrick Thomson, and Rob Rix
maintainer:          patrickt@github.com
copyright:           2019 Josh Vera, Patrick Thomson, and Rob Rix
category:            Control
build-type:          Simple
extra-source-files:
  README.md
  ChangeLog.md

tested-with:
  GHC == 8.2.2
  GHC == 8.4.4
  GHC == 8.6.5
  GHC == 8.8.1

library
  hs-source-dirs:      src
  default-language: Haskell2010
  exposed-modules:
    Control.Carrier.State.IORef
    Control.Effect.Exception
  build-depends:
      base             >= 4.7 && < 5
    , fused-effects    >= 1
    , transformers     >= 0.4 && < 0.6

test-suite test
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Main.hs
  build-depends:
      base
    , fused-effects
    , tasty         ^>= 1.2
    , tasty-hunit   ^>= 0.10
    , transformers

source-repository head
  type:     git
  location: https://github.com/fused-effects/fused-effects-exceptions
